--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,59 @@
+<!--
+  scholarly
+    app
+      * index.html
+-->
+
 <!DOCTYPE html>
-<html>
-<head lang="en">
+
+<html ng-app="scholarly">
+  <head lang="en">
     <meta charset="UTF-8">
-    <title>Bloc Base Project</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Scholarly</title>
+    <!-- Site Logo -->
+    <link rel="icon" href="/assets/images/logo.png">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Work+Sans">
+    <!-- FirebaseUI -->
+    <link rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.3.0/firebaseui.css">
+    <!-- Application Stylesheet -->
     <link rel="stylesheet" href="/styles/main.css">
-</head>
-<body>
-    <h4>Hello, World???</h4>
+    <link rel="stylesheet" href="/styles/landing.css">
+    <link rel="stylesheet" href="/styles/words.css">
+  </head>
+  <body>
+    <ui-view></ui-view>
+    <!-- AngularJS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <!-- AngularUI Router -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+    <!-- Initialize Firebase -->
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyBPux6MAKBIhdOh9zHzHcg1i9Vdfz8L-p4",
+        authDomain: "scholarly-7939a.firebaseapp.com",
+        databaseURL: "https://scholarly-7939a.firebaseio.com",
+        projectId: "scholarly-7939a",
+        storageBucket: "scholarly-7939a.appspot.com",
+        messagingSenderId: "774055465536"
+      };
+      firebase.initializeApp(config);
+    </script>
+    <!-- FirebaseUI -->
+    <script src="https://cdn.firebase.com/libs/firebaseui/2.3.0/firebaseui.js"></script>
+    <!-- Application Scripts -->
     <script src="/scripts/app.js"></script>
-</body>
+    <script src="/scripts/services/UserWords.js"></script>
+    <script src="/scripts/services/Words.js"></script>
+    <script src="/scripts/controllers/LandingCtrl.js"></script>
+    <script src="/scripts/controllers/WordsCtrl.js"></script>
+  </body>
 </html>
