Save before reworking 'words' ctrl + dependencies

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/landing.css">
     <link rel="stylesheet" href="/styles/words.css">
+    <link rel="stylesheet" href="/styles/quiz.css">
   </head>
   <body>
     <ui-view></ui-view>
@@ -55,5 +56,6 @@
     <script src="/scripts/services/Words.js"></script>
     <script src="/scripts/controllers/LandingCtrl.js"></script>
     <script src="/scripts/controllers/WordsCtrl.js"></script>
+    <script src="/scripts/controllers/QuizCtrl.js"></script>
   </body>
 </html>
