--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
     <script src="/scripts/app.js"></script>
     <script src="/scripts/services/UserWords.js"></script>
     <script src="/scripts/services/Words.js"></script>
+    <script src="/scripts/services/Quiz.js"></script>
     <script src="/scripts/controllers/LandingCtrl.js"></script>
     <script src="/scripts/controllers/WordsCtrl.js"></script>
     <script src="/scripts/controllers/QuizCtrl.js"></script>
