Working navigation button throughout site

--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,7 @@
     <script src="/scripts/services/UserWords.js"></script>
     <script src="/scripts/services/Words.js"></script>
     <script src="/scripts/services/Quiz.js"></script>
+    <script src="/scripts/controllers/MainNavCtrl.js"></script>
     <script src="/scripts/controllers/LandingCtrl.js"></script>
     <script src="/scripts/controllers/WordsCtrl.js"></script>
     <script src="/scripts/controllers/QuizCtrl.js"></script>
