Introduced display name header and insufficient words modal in quiz

--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
     <script src="https://cdn.firebase.com/libs/firebaseui/2.3.0/firebaseui.js"></script>
     <!-- Application Scripts -->
     <script src="/scripts/app.js"></script>
+    <script src="/scripts/services/User.js"></script>
     <script src="/scripts/services/UserWords.js"></script>
     <script src="/scripts/services/Words.js"></script>
     <script src="/scripts/services/Quiz.js"></script>
