Added a 'User' view with adjustable quizLength slider + quizBuffering toggle + userProfile data in firebase to match

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="/styles/landing.css">
     <link rel="stylesheet" href="/styles/words.css">
     <link rel="stylesheet" href="/styles/quiz.css">
+    <link rel="stylesheet" href="/styles/user.css">
   </head>
   <body>
     <ui-view></ui-view>
@@ -60,5 +61,6 @@
     <script src="/scripts/controllers/LandingCtrl.js"></script>
     <script src="/scripts/controllers/WordsCtrl.js"></script>
     <script src="/scripts/controllers/QuizCtrl.js"></script>
+    <script src="/scripts/controllers/UserCtrl.js"></script>
   </body>
 </html>
